--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Dialog">
+            android:theme="@style/CustomDialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
